--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,8 @@
         "types": [
             "node",
             "@cocos/creator-types/editor",
+            "./game-framework/colyseus-cocos-creator.d.ts",
         ],
-        "paths": {
-            "colyseus": ["../node_modules/colyseus.js/dist/colyseus-cocos-creator.js"]
-        }
     },
     "exclude": ["./game-framework"],
 }
